--- a/app/src/main/res/layout/item_container_recent_conversion.xml
+++ b/app/src/main/res/layout/item_container_recent_conversion.xml
@@ -43,6 +43,7 @@
             android:layout_marginStart="@dimen/_8sdp"
             android:layout_marginEnd="@dimen/_8sdp"
             android:ellipsize="end"
+            android:text="Abdewklerkjdfjk"
             android:fontFamily="@font/ntailub"
             android:maxLines="1"
             android:textColor="@color/black"
@@ -58,6 +59,7 @@
             android:layout_marginStart="@dimen/_8sdp"
             android:layout_marginEnd="@dimen/_8sdp"
             android:ellipsize="end"
+            android:text="djdjd"
             android:maxLines="1"
             android:textColor="@color/black"
             android:textSize="@dimen/_12ssp"
