--- a/app/src/main/res/layout/activity_recent_chat.xml
+++ b/app/src/main/res/layout/activity_recent_chat.xml
@@ -1,36 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.RecentChatActivity">
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolBar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_60sdp"
-        android:background="@color/red">
+        android:background="@color/red"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/ntailub"
             android:text="Chats"
             android:textColor="@color/white"
-            android:textSize="@dimen/_20ssp"
-            android:fontFamily="@font/ntailub"/>
+            android:textSize="@dimen/_20ssp" />
+
         <com.makeramen.roundedimageview.RoundedImageView
             android:layout_width="@dimen/_50sdp"
             android:layout_height="@dimen/_50sdp"
             android:layout_gravity="end|center"
-            app:riv_corner_radius="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_5sdp"
             android:src="@drawable/doctor_img"
-            android:layout_marginEnd="@dimen/_5sdp"/>
+            app:riv_corner_radius="@dimen/_10sdp" />
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/conversationsRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/toolBar"/>
+        android:layout_height="0dp"
+        android:layout_below="@id/toolBar"
+        android:visibility="visible"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintTop_toBottomOf="@id/toolBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:listitem="@layout/item_container_recent_conversion" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
